fix overflow

--- a/views/styles/base.scss
+++ b/views/styles/base.scss
@@ -22,11 +22,15 @@ time, mark, audio, video {
     box-sizing: border-box;
 }
 
+// html{
+//     overflow-x: hidden;
+// }
+
 body {
     line-height:1;
     background-color:#9ad3bc2d;
     // width: 100%;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 pre {
